# papers

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  flake.nix
.github/workflows/: ci.yaml
cli/: Cargo.toml  build.rs
cli-lib/: Cargo.toml
cli-lib/src/: cli.rs  lib.rs
cli/src/: cli.rs  main.rs
core/: Cargo.toml
core/migrations/2022-12-23-165949_create_labels/: up.sql
core/migrations/2022-12-23-230045_create_notes/: up.sql
core/src/: author.rs  label.rs  repo.rs
crates/papers-cli/: Cargo.toml  build.rs
crates/papers-cli-lib/: Cargo.toml
crates/papers-cli-lib/src/: cli.rs  config.rs  err.rs  file_or_stdin.rs  fuzzy.rs  ids.rs  interactive.rs  lib.rs  rename_files.rs  table.rs  url_path.rs
crates/papers-cli/src/: main.rs
crates/papers-cli/tests/: add.rs  authors.rs  cli.rs  edit.rs  fetch.rs  init.rs  labels.rs  list.rs  notes.rs  open.rs  remove.rs  rename_files.rs  review.rs  show.rs  tags.rs  update.rs
crates/papers-cli/tests/common/: mod.rs
crates/papers-core/: Cargo.toml
crates/papers-core/migrations/2022-12-23-134147_create_papers/: up.sql
crates/papers-core/migrations/2022-12-23-143217_create_tags/: up.sql
crates/papers-core/migrations/2022-12-25-083339_add_authors/: up.sql
crates/papers-core/migrations/2023-01-13-190812_add_deleted_column/: down.sql  up.sql
crates/papers-core/migrations/2023-01-14-095312_created_modified_datetimes/: down.sql  up.sql
crates/papers-core/src/: author.rs  db.rs  label.rs  lib.rs  paper.rs  primitive.rs  repo.rs  review.rs  tag.rs
crates/papers-core/src/db/: models.rs  schema.rs
migrations/2022-12-23-134147_create_papers/: down.sql  up.sql
migrations/2022-12-23-143217_create_tags/: up.sql
migrations/2022-12-23-165949_create_labels/: up.sql
migrations/2022-12-25-083339_add_authors/: down.sql
nix/: default.nix  papers.nix
src/: author.rs  cli.rs  config.rs  db.rs  label.rs  lib.rs  main.rs  models.rs  paper.rs  repo.rs  schema.rs  tag.rs
src/db/: models.rs  schema.rs
