[package]
name = "papers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
diesel = { version = "2.0.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
