[package]
name = "papers-cli-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
papers-core = {path = "../papers-core", version = "0.1.0"}
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
cli-table = "0.4.7"
directories = "4.0.1"
open = "3.2.0"
pdf = "0.7.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap_complete = "4.0.7"
http = "0.2.8"
expect-test = "1.4.0"
gray_matter = "0.2.5"
