[package]
name = "papers-cli-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
papers-core = {path = "../papers-core", version = "0.1.0"}
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
directories = "5.0.1"
open = "5.0.0"
pdf = "0.9.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tempfile = "3.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap_complete = "4.3.2"
expect-test = "1.4.1"
gray_matter = "0.2.6"
chrono = "0.4.26"
comfy-table = "7.1.0"
atty = "0.2.14"
infer = "0.15.0"
skim = { version = "0.10.4", default-features = false }
