[package]
name = "papers-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
papers-core = {path = "../papers-core", version = "0.1.0"}
papers-cli-lib = {path = "../papers-cli-lib", version = "0.1.0"}
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
cli-table = "0.4.7"
directories = "4.0.1"
open = "3.2.0"
pdf = "0.7.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
path = "src/main.rs"
name = "papers"

[build-dependencies]
clap = "*"
clap_complete = "*"
papers-cli-lib = {path = "../papers-cli-lib", version = "0.1.0"}

[dev-dependencies]
expect-test = "1.4.0"
