[package]
name = "papers-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
papers-core = {path = "../papers-core", version = "0.1.0"}
papers-cli-lib = {path = "../papers-cli-lib", version = "0.1.0"}
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
cli-table = "0.4.7"
directories = "5.0.1"
open = "5.0.0"
pdf = "0.8.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
tempfile = "3.7.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
path = "src/main.rs"
name = "papers"

[build-dependencies]
clap = "*"
clap_complete = "*"
papers-cli-lib = {path = "../papers-cli-lib", version = "0.1.0"}

[dev-dependencies]
expect-test = "1.4.1"
