[package]
name = "papers-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
diesel = { version = "2.0.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
serde = { version = "1.0.151", features = ["derive"] }
tracing = "0.1.37"
chrono = { version = "0.4.23", features = ["serde"] }

[dev-dependencies]
expect-test = "1.4.0"
tempfile = "3.3.0"
