[package]
name = "papers-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
diesel = { version = "2.1.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
serde = { version = "1.0.181", features = ["derive"] }
tracing = "0.1.37"
chrono = { version = "0.4.26", features = ["serde"] }

[dev-dependencies]
expect-test = "1.4.1"
tempfile = "3.7.0"
