[package]
name = "papers-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.181", features = ["derive"] }
serde_yaml = "0.9.25"
tracing = "0.1.37"
chrono = { version = "0.4.26", features = ["serde"] }
gray_matter = "0.2.6"

[dev-dependencies]
expect-test = "1.4.1"
tempfile = "3.7.0"
